# linux-guardian

./: .gitignore  CONTRIBUTING.md  Cargo.toml  FINAL_UX_SUMMARY.md  GITHUB_READY_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SECURITY.md  UX_FEATURES_IMPLEMENTED.md  deny.toml  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CVE_DATABASE.md  DESKTOP_USER_GUIDE.md  DEVELOPMENT.md  QUICK_START.md  ROADMAP.md  UX_IMPROVEMENTS.md  VERIFICATION_GUIDE.md
src/: commands.rs  lib.rs  main.rs  output.rs  server_context.rs
src/cve_db/: downloader.rs  matcher.rs  mod.rs  package_cache.rs  schema.rs
src/detectors/: application_versions.rs  binary_validation.rs  bootloader.rs  container_security.rs  credential_theft.rs  cron_backdoor.rs  cryptominer.rs  cve_database.rs  cve_database_sqlite.rs  cve_knowledge_base.rs  disk_encryption.rs  ebpf.rs  file_permissions.rs  firewall.rs  kernel_hardening.rs  kernel_modules.rs  malware_hash_db.rs  malware_hashes.rs  mandatory_access_control.rs  memory_security.rs  mod.rs  network.rs  nvd_database.rs  package_integrity.rs  privilege_escalation.rs  process.rs  process_capabilities.rs  ssh.rs  systemd_security.rs  updates.rs
src/detectors/malware_hash_db/: hashing.rs  mod.rs  scan_cache.rs  scanner.rs
src/detectors/memory_threats/: allowlists.rs  deep_scan.rs  elf_parser.rs  fileless.rs  library_injection.rs  masquerading.rs  mod.rs  shellcode.rs  utils.rs
src/detectors/network/: connections.rs  mod.rs  services.rs  traffic.rs
src/models/: mod.rs
src/utils/: mod.rs  privilege.rs  version.rs
tests/: docker-test.sh  integration_tests.rs
tests/unit/: cryptominer_test.rs  cve_database_test.rs  mod.rs  models_test.rs  network_test.rs  privilege_escalation_test.rs  process_test.rs  ssh_test.rs
