[package]
name = "linux-guardian"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Linux Guardian Contributors"]
description = "Comprehensive Linux security scanner for detecting rootkits, malware, privilege escalation, and active attacks"
license = "MIT OR Apache-2.0"

[lib]
name = "linux_guardian"
path = "src/lib.rs"

[[bin]]
name = "linux-guardian"
path = "src/main.rs"

[dependencies]
# CLI and configuration
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# System interfaces
libc = "0.2"
nix = { version = "0.30", features = ["user", "process", "fs"] }
procfs = { version = "0.18", default-features = false }

# Async runtime for parallel execution
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# HTTP client for CVE database downloads
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# SQLite database for CVE caching
rusqlite = { version = "0.37", features = ["bundled"] }

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"

# Performance
rayon = "1.10"
parking_lot = "0.12"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
sha2 = "0.10"
hex = "0.4"
walkdir = "2.5"

# Network analysis (optional, can be enabled for advanced features)
pnet = { version = "0.35", optional = true }
# Socket2 for better TCP/UDP control
socket2 = { version = "0.6", features = ["all"] }
# Hickory DNS (formerly trust-dns) for DNS analysis
hickory-resolver = { version = "0.25", optional = true }

[dev-dependencies]
tempfile = "3.13"

[features]
default = []
network = ["pnet"]
full = ["network"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
